# port-libtiff

./: .gitignore  all_cves.json  relevant_cves.json  test-original.sh  workflow.yaml
.github/workflows/: build-debs.yml
.plan/: workflow-structure.yaml
.plan/phases/: 01-compat-contract-abi.md  02-upstream-matrix.md  03-link-package-surface.md  04-downstream-apps.md  05-final-hardening.md
original/.pc/: applied-patches
original/.pc/CVE-2023-3164.patch/tools/: tiffcrop.c
original/.pc/CVE-2025-61143.patch/tools/: tiffcrop.c
original/.pc/CVE-2025-61144.patch/tools/: tiffcrop.c
original/.pc/CVE-2025-8851.patch/tools/: tiffcrop.c
original/.pc/CVE-2025-8961.patch/tools/: tiffcrop.c
original/debian/: clean  libtiff-dev.install  libtiff-doc.doc-base  libtiff-doc.install  libtiff-doc.links  rules  watch
original/debian/patches/: CVE-2023-1916.patch  CVE-2023-3164.patch  CVE-2023-52355.patch  CVE-2025-61143.patch  CVE-2025-61144.patch  CVE-2025-8851.patch  CVE-2025-8961.patch  CVE-2025-9165.patch
original/libtiff/: tif_dirinfo.c  tif_dirread.c  tif_getimage.c
original/test/: CMakeLists.txt
original/tools/: tiffdither.c  tiffmedian.c
safe/: .gitignore  CMakeLists.txt  Cargo.toml
safe/abi/: platform-excluded-linux.txt  public-surface.inputs.json  public-surface.json
safe/capi/: external_codec_helper.c  jpeg_helper.c  libtiff-safe.map  libtiffxx-safe.map  tiff_placeholder.c  tiffxx_placeholder.cxx
safe/cmake/: TiffConfig.cmake.in
safe/debian/: changelog  clean  control  libtiff-dev.install  libtiff6.symbols  libtiffxx6.symbols  not-installed  rules
safe/debian/patches/: CVE-2023-6228.patch  CVE-2024-7006.patch  CVE-2025-8176.patch  CVE-2025-8534.patch  CVE-2025-9900.patch  no_smartquotes.patch
safe/debian/source/: include-binaries
safe/include/: tif_config.h  tiffconf.h
safe/libtiff/: tiffiop.h
safe/perf/: latest.json  workloads.json
safe/scripts/: benchmark-vs-original.py  build-deb.sh  check-packaged-install-surface.sh  check-public-surface.py  run-upstream-shell-tests.sh
safe/src/: lib.rs  rgba.rs  strile.rs
safe/src/abi/: mod.rs
safe/src/core/: codec.rs  color.rs  directory.rs  field_registry.rs  field_tables.rs  jpeg.rs  mod.rs
safe/test/: CMakeLists.txt  abi_layout_probe.h  abi_layout_probe_bridge.c  api_codec_smoke.c  api_custom_dir_read_smoke.c  api_directory_read_smoke.c  api_field_registry_smoke.c  api_open_mode_smoke.c  api_rgba_image_helpers_smoke.c  dirread_regressions.c  public_abi_layout_smoke.c  strile_regressions.c
safe/tools/: CMakeLists.txt  rgb2ycbcr.c  tiff2bw.c  tiff2ps.c  tiff2rgba.c  tiffcp.c  tiffcrop.c  tiffdither.c  tiffsplit.c
