[package]
name = "safe-libtiff"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "tiff_safe_core"
crate-type = ["staticlib"]

[dependencies]
fax = "0.2.6"
flate2 = "1.1.9"
libc = "0.2"
weezl = "0.1.12"

[profile.dev]
panic = "abort"
codegen-units = 1

[profile.release]
panic = "abort"
codegen-units = 1
